[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "CLI tool to fetch PubMed research paper"
authors = ["Soundaryar1008 <soundaryar1008@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"
